Issue #11 - prevent site nav text from wrapping

--- a/ruby/rails/app/assets/stylesheets/v2/60-site_nav.css
+++ b/ruby/rails/app/assets/stylesheets/v2/60-site_nav.css
@@ -60,10 +60,12 @@
 }
 
 #site-nav__links li {
-
   /* appearance */
   background-color: transparent;
   padding-top: 0.5em;
+
+  /* layout */
+  white-space: nowrap;
 }
 
 #site-nav__move {
